more tests, array support
