# src/main/java/io/swagger/sample/SampleController.java
@@ -4,7 +4,13 @@ import io.swagger.util.Json;
 
 import java.util.List;
 
+import javax.ws.rs.core.Response;
+
 public class SampleController {
+  public Object postFormData(Long id, String name) {
+    return "{\"id\": " + id + ", \"name\": \"" + name + "\"}";
+  }
+
   public String goodbye(List<String> params) {
     return Json.pretty(params);
   }
